@@ -4,6 +4,7 @@ SUBDIRS = graphics help icons maps sfx
 tmwdatadir = $(pkgdatadir)/data
 
 tmwdata_DATA =			\
+	equipment.xml	\
 	items.xml
 
 EXTRA_DIST =			\
