@@ -199,14 +199,17 @@ SET(SRCS
     net/tradehandler.h
     resources/ambientoverlay.cpp
     resources/ambientoverlay.h
+	resources/equipmentdb.cpp
+	resources/equipmentdb.h
+	resources/equipmentinfo.h
     resources/image.cpp
     resources/image.h
     resources/imagewriter.cpp
     resources/imagewriter.h
-    resources/iteminfo.h
-    resources/iteminfo.cpp
-    resources/itemmanager.cpp
-    resources/itemmanager.h
+	resources/itemdb.cpp
+	resources/itemdb.h
+	resources/iteminfo.h
+	resources/iteminfo.cpp
     resources/mapreader.cpp
     resources/mapreader.h
     resources/music.h
